--- a/reactbasics/package.json
+++ b/reactbasics/package.json
@@ -2,6 +2,7 @@
   "name": "reactbasics",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/Ain-e-Muhammad/reactbasics",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
